[tool.poetry]
name = "hashmap_repeated_word"
version = "0.1.0"
description = ""
authors = ["Eslam Akram <eslam_akram91@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
